tests/errors/parser/invalid-width2.expect
---CODE---
1
---STDERR---
Error: Calyx Parser:  --> 4:12
  |
4 |     r.in = 5'xaa;âŠ
  |            ^---^
  |
  = Cannot represent given literal 'aa' in 5 bits
